<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ddeveloper"
            android:textAlignment="center"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acercade_nombre"
            android:textAlignment="center"
            android:textSize="@dimen/nombre_developer"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textAlignment="center"


            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acercade_descripcion"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acercade_derechos"
            android:textAlignment="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acercade_anio"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
    </LinearLayout>





</LinearLayout>