<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactar"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_correo"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mensaje"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnEnviarCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MiBotonRaised"
            android:text="@string/boton_enviarmensaje"
            android:onClick="ConfirmarDatos"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>